<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="fyp.leungww.exsplit.CreateANewTripFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">

        <EditText
            android:id="@+id/newtrip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/attribute_margin"
            android:layout_row="0"
            android:hint="@string/hint_newtrip_name"
            android:inputType="textCapSentences"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/hintColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/newtrip_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="@dimen/attribute_margin"
            android:layout_row="0"
            android:background="@drawable/button_transition_accent_color"
            android:text="@string/create"
            android:textColor="@android:color/white" />
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/newtrip_from"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/attribute_margin"
                    android:background="@drawable/button_transition_grey_300"
                    android:text="@string/departure_date" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/attribute_margin"
                    android:src="@drawable/ic_airplanemode_on_grey600_48dp" />

                <Button
                    android:id="@+id/newtrip_to"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/attribute_margin"
                    android:background="@drawable/button_transition_grey_300"
                    android:text="@string/return_date" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countries" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="2">

                <CheckBox
                    android:id="@+id/newtrip_canada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/canada" />

                <CheckBox
                    android:id="@+id/newtrip_europe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/europe_excl_uk" />

                <CheckBox
                    android:id="@+id/newtrip_uk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:checked="true"
                    android:text="@string/uk" />

                <CheckBox
                    android:id="@+id/newtrip_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="@string/us" />
            </GridLayout>

            <Button
                android:id="@+id/newtrip_add_travellers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/attribute_margin"
                android:background="@drawable/button_transition_com_facebook_blue"
                android:text="@string/add_edit_friends_via_fb"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/newtrip_travellers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/attribute_margin"
                android:text="@string/travellers" />

            <LinearLayout
                android:id="@+id/newtrip_traveller_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>