<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fyp.leungww.exsplit.AddItemExpressStep1Fragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3">

        <EditText
            android:id="@+id/itemexpress_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/attribute_margin"
            android:layout_row="0"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:hint="@string/item_price"
            android:maxLength="29"
            android:singleLine="true"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/hintColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/itemexpress_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="@dimen/attribute_margin"
            android:layout_row="0"
            android:background="@color/accentColor"
            android:text="@string/next"
            android:textColor="@android:color/white" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginTop="@dimen/attribute_margin"
            android:text="@string/shared_between" />

        <Spinner
            android:id="@+id/itemexpress_trip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/attribute_margin"
            android:layout_row="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginTop="@dimen/attribute_margin"
            android:text="@string/currency" />

        <Spinner
            android:id="@+id/itemexpress_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/attribute_margin"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/way_of_splitting"/>

        <RadioGroup
            android:id="@+id/newitem_split_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/itemexpress_even_split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/even_split"/>

            <RadioButton
                android:id="@+id/itemexpress_by_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_amount"/>
        </RadioGroup>
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:id="@+id/itemexpress_split_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

</LinearLayout>
